changes to files and new files

--- a/index.html
+++ b/index.html
@@ -7,7 +7,24 @@
     <title>HMS Tarantula</title>
     <h1>HMS Tarantula</h1>
 </head>
+<header>
+    <nav>
+<div><i>
+    image
+</i>
+</div>
+<ul>
+    <li><a href="./home">home</a></li>
+    <li><a href="./gallery">gallery</a></li>
+    <li><a href="./about">about</a></li>
+    <li><a href="./facts">facts</a></li>
+</ul>
+    </nav>
+</header>
 <body>
     
 </body>
+<footer>
+    
+</footer>
 </html>
