--- a/facts.html
+++ b/facts.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  
-    <title>Facts</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HMS Tarantula</title>
+    <h1>HMS Tarantula</h1>
 </head>
+<header>
+    <nav>
+<div><i>
+    image
+</i>
+</div>
+<ul>
+    <li><a href="./home">home</a></li>
+    <li><a href="./gallery">gallery</a></li>
+    <li><a href="./about">about</a></li>
+    <li><a href="./facts">facts</a></li>
+</ul>
+    </nav>
+</header>
 <body>
-    <h1>Interesting Facts</h1>
     
 </body>
+<footer>
+    
+</footer>
 </html>
