--- a/index.html
+++ b/index.html
@@ -1,30 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon"
+        href="insect_class.ico">
     <title>HMS Tarantula</title>
     <h1>HMS Tarantula</h1>
 </head>
 <header>
     <nav>
-<div><i>
-    image
-</i>
-</div>
-<ul>
-    <li><a href="./home">home</a></li>
-    <li><a href="./gallery">gallery</a></li>
-    <li><a href="./about">about</a></li>
-    <li><a href="./facts">facts</a></li>
-</ul>
+        <div><i>
+                image
+            </i>
+        </div>
+        <ul>
+            <li><a href="./home">home</a></li>
+            <li><a href="./gallery">gallery</a></li>
+            <li><a href="./about">about</a></li>
+            <li><a href="./facts">facts</a></li>
+        </ul>
     </nav>
 </header>
+
 <body>
-    
+
 </body>
 <footer>
-    
+
 </footer>
+
 </html>
