--- a/gallery.html
+++ b/gallery.html
@@ -14,10 +14,10 @@
 </i>
 </div>
 <ul>
-    <li><a href="./home">home</a></li>
-    <li><a href="./gallery">gallery</a></li>
-    <li><a href="./about">about</a></li>
-    <li><a href="./facts">facts</a></li>
+    <li><a href="./index.html">home</a></li>
+    <li><a href="./gallery.html">gallery</a></li>
+    <li><a href="./about.html">about</a></li>
+    <li><a href="./facts.html">facts</a></li>
 </ul>
     </nav>
 </header>
