addiding header for about page

--- a/about.html
+++ b/about.html
@@ -4,25 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HMS Tarantula</title>
-    <h1>HMS Tarantula</h1>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./styles/style.css">
+    <title>About HMS Tarantula</title>
 </head>
-<header>
-    <nav>
-<div><i>
-    image
-</i>
-</div>
-<ul>
-    <li><a href="./home">home</a></li>
-    <li><a href="./gallery">gallery</a></li>
-    <li><a href="./about">about</a></li>
-    <li><a href="./facts">facts</a></li>
-</ul>
-    </nav>
-</header>
+
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li><a href="./home">home</a></li>
+                <li><a href="./gallery">gallery</a></li>
+                <li><a href="./about">about</a></li>
+                <li><a href="./facts">facts</a></li>
+            </ul>
+        </nav>
+        <!-- <div style="margin-bottom: 60px"></div> -->
+        <div class="container-xl headerTitle">
+            <div class="row">
+                <div class="col">
+                    <h1 id="title" class="display-6"><b>About:</b>
+                        <a class="hyperLink" href="http://dbpedia.org/resource/HMS_Tarantula">HMS Tarantula</a>
+                    </h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <div class="text-muted">
+                        <span class="text-nowrap">An Entity of Type: <a class="hyperLink" href="http://dbpedia.org/ontology/Ship">ship</a>, </span>
+                        <span class="text-nowrap">from Named Graph:  <a class="hyperLink" href="http://dbpedia.org">http://dbpedia.org</a>, </span>
+                        <span class="text-nowrap">within Data Space: <a class="hyperLink" href="http://dbpedia.org">dbpedia.org</a></span>
+                    </div>
+                </div>
+            </div>
+            <div class="row pt-2">
+                <div class="col-xs-9 col-sm-10">
+                    <p class="lead">HMS Tarantula was an Insect-class gunboat of the Royal Navy. Launched in 1915, the gunboat saw service in both the First and Second World Wars. Tarantula served with the Tigris flotilla in 1916, retaking a former British gunboat that had previously been captured by the Ottoman Empire. After the First World War, Tarantula was towed to China, joining the China Station, eventually ending up at Trincomalee, Ceylon during the Second World War. After the end of the war, the vessel was sunk as a gunnery target in the Bay of Bengal in 1946.</p>
+                </div>
+                <div class="col-xs-3 col-sm-2">
+                    <a class="hyperLink" href="#" class="thumbnail">
+                        <img src="./images/300px-HMS_Tarantula_Trincomalee_1943_IWM_FL_001665.jpeg" alt="thumbnail" class="img-fluid">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main>
+        <div class="container">
+        </div>
+    </main>
 </body>
 <footer>
     
