some links chnges

--- a/about.html
+++ b/about.html
@@ -25,14 +25,14 @@
             <div class="row">
                 <div class="col">
                     <h1 id="title" class="display-6"><b>About:</b>
-                        <a class="hyperLink" href="http://dbpedia.org/resource/HMS_Tarantula">HMS Tarantula</a>
+                        <a class="hyperLink" href="http://wikiroulette.co/?p=HMS_Tarantula">HMS Tarantula</a>
                     </h1>
                 </div>
             </div>
             <div class="row">
                 <div class="col">
                     <div class="text-muted">
-                        <span class="text-nowrap">An Entity of Type: <a class="hyperLink" href="http://dbpedia.org/ontology/Ship">ship</a>, </span>
+                        <span class="text-nowrap">An Entity of Type: <a class="hyperLink" href="https://en.wikipedia.org/wiki/Ship">ship</a>, </span>
                         <span class="text-nowrap">from Named Graph:  <a class="hyperLink" href="http://dbpedia.org">http://dbpedia.org</a>, </span>
                         <span class="text-nowrap">within Data Space: <a class="hyperLink" href="http://dbpedia.org">dbpedia.org</a></span>
                     </div>
