--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <title>HMS Tarantula</title>
     <h1>HMS Tarantula</h1>
 </head>
@@ -21,6 +22,9 @@
                 <a class="nav-link active" aria-current="page" href="./index.html">home</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="./about.html">about</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="./facts.html">facts</a>
               </li>
               <li class="nav-item">
@@ -34,7 +38,12 @@
 <body>
     
 </body>
-<footer>
-    
+<footer class="card-footer footer-expand-lg bg-light"">
+	<p>Copyright © 2023 The HMS Tarantula</p>
+	<p>
+		<a href="about.html">About</a> -
+		<a href="policy.html">Privacy Policy</a> -
+		<a href="contact.html">Contact Us</a>
+	</p>
 </footer>
 </html>
