--- a/index.html
+++ b/index.html
@@ -5,26 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <title>HMS Tarantula</title>
     <h1>HMS Tarantula</h1>
 </head>
 <header>
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index"></a>
+          <a class="navbar-brand" href="./index.html"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./home">home</a>
+                <a class="nav-link active" aria-current="page" href="./index.html">home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./facts">facts</a>
+                <a class="nav-link" href="./about.html">about</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./gallery">gallery</a>
+                <a class="nav-link" href="./facts.html">facts</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./gallery.html">gallery</a>
               </li>
             </ul>
           </div>
@@ -34,7 +38,12 @@
 <body>
     
 </body>
-<footer>
-    
+<footer class="card-footer footer-expand-lg bg-light"">
+	<p>Copyright © 2023 The HMS Tarantula</p>
+	<p>
+		<a href="about.html">About</a> -
+		<a href="policy.html">Privacy Policy</a> -
+		<a href="contact.html">Contact Us</a>
+	</p>
 </footer>
 </html>
