--- a/index.html
+++ b/index.html
@@ -5,39 +5,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon"
-        href="insect_class.ico">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="icon" type="image/x-icon" href="insect_class.ico">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <title>HMS Tarantula</title>
     <h1>HMS Tarantula</h1>
 </head>
+
 <header>
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./home">home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./facts">facts</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./gallery">gallery</a>
-              </li>
-            </ul>
-          </div>
+            <a class="navbar-brand" href="index"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="./home">home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./facts">facts</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./gallery">gallery</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </nav>
+    </nav>
 </header>
 
 <body>
-
+    <div id="clock" onload="currentTime()">
+    </div>
+    <div class="bg-image" style="
+    background-image: url('./HMS_Tarantula.jpg');
+    height: 100vh;
+  "></div>
 </body>
+
 <footer>
 
 </footer>
