--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
 
 <body>
         <!-- <div style="margin-bottom: 60px"></div> -->
-        <div class="container-xl headerTitle">
+        <div class="container-xl headerTitle mb-5">
             <div class="row">
                 <div class="col">
                     <h1 id="title" class="display-6"><b>About:</b>
@@ -65,7 +65,47 @@
             </div>
         </div>
     <main>
-        <div class="container">
+        <div class="infoContainer">
+            <section class="info">
+                <h2 class="text-uppercase fs-2"><i>Operational history</i></h2>
+                <p>In 1916 <i>Tarantula</i> along with three other gunboats were towed out to join the Royal Navy's Tigris flotilla and under the command of H.G. Sherbrooke successfully participated in a series of engagements en route to Baghdad. On 26 February 1917 Tarantula captured the Ottoman gunboat Suleiman Pak, which was the Fly-class gunboat HMS Firefly, which the Ottomans had captured in December 1915 after she grounded and a shell through her boiler disabled her.
+                    After the ending of the First World War Tarantula was towed to China and joined the China Station. Around 1940 she went from Singapore to Trincomalee, Ceylon, where as a result of disrepair she served as offices. It was in this capacity that in 1944, she served briefly as Admiral Bruce Fraser's flagship of the British Pacific Fleet.[2] She was sunk as a gunnery target in the Bay of Bengal off Trincomalee by the destroyers HMS Carron and HMS Carysfort on 1 May 1946.
+                </p>
+            </section>
+            <section class="history">
+                <!-- <h2 class="text-uppercase fs-2" >history</h2> -->
+                <table class="infobox" style="width:25.5em;border-spacing:2px;">
+                    <tbody class="p-2"><tr>
+                        <tr><th height="30" colspan="2" class="text-uppercase fs-2 mb-1" style="text-align:center;vertical-align:middle;font-size:110%;""><span style="padding-left:1em">history</span></th></tr>
+                    <tr><th height="30" colspan="2" style="background-color:#1256b0;text-align:left;padding-left:2px;vertical-align:middle;font-size:110%;"><span class="flagicon"><img alt="" src="./images/112px-Naval_Ensign_of_the_United_Kingdom.svg.webp" decoding="async" width="56" height="28"></span><span style="padding-left:1em">United Kingdom</span></th></tr>
+                    <tr style="vertical-align:top;"><td style="font-weight: bold">Name</td><td>HMS <i>Tarantula</i></td></tr>
+                    <tr style="vertical-align:top;"><td style="font-weight: bold">Builder</td><td>Wood, Skinner &amp; Co, Newcastle upon Tyne, UK</td></tr>
+                    <tr style="vertical-align:top;"><td style="font-weight: bold">Launched</td><td>1915</td></tr>
+                    <tr style="vertical-align:top;"><td style="font-weight: bold">Fate</td><td>Sunk as target 1 May 1946</td></tr>
+                    <tr><th colspan="2" style="background-color:#1256b0;text-align:center;vertical-align:middle;font-size:110%;">General characteristics</th></tr>
+                    <tr style="vertical-align:top;"><td style="font-weight: bold">Class and type</td><td><span title="Insect-class gunboat">Insect-class</span> <span title="Gunboat">gunboat</span></td></tr>
+                    <tr style="vertical-align:top;"><td style="font-weight: bold">Displacement</td><td>625 long tons (635&nbsp;t)</td></tr>
+                    <tr style="vertical-align:top;"><td style="font-weight: bold">Length</td><td>237&nbsp;ft 6&nbsp;in (72.39&nbsp;m)</td></tr>
+                    <tr style="vertical-align:top;"><td style="font-weight: bold">Beam</td><td>36&nbsp;ft (11&nbsp;m)</td></tr>
+                    <tr style="vertical-align:top;"><td style="font-weight: bold">Draught</td><td>4&nbsp;ft (1.2&nbsp;m)</td></tr>
+                    <tr style="vertical-align:top;"><td style="font-weight: bold">Complement</td><td>55</td></tr>
+                    <tr style="vertical-align:top;"><td style="font-weight: bold">Armament</td><td><ul style="list-style:none; margin:0;">
+                    <li style="padding-left: .4em; text-indent: -.4em;">As built:</li>
+                    <ul style="list-style: none">
+                    <li style="padding-left: .4em; text-indent: -.4em;">2 × 12-pounder guns</li>
+                    <li style="padding-left: .4em; text-indent: -.4em;">6 × .303-inch Maxim machine guns</li>
+                    </ul>
+                    <li style="padding-left: .4em; text-indent: -.4em;">Variations:</li>
+                    <ul style="list-style: none">
+                    <li style="padding-left: .4em; text-indent: -.4em;">1 × <span>QF 2-pounder "Pom-Pom"</span></li>
+                    <li style="padding-left: .4em; text-indent: -.4em;">1 × <span>QF 3-inch anti-aircraft gun</span></li>
+                    <li style="padding-left: .4em; text-indent: -.4em;">.303-inch <span>Lewis machine gun</span></li>
+                    <li style="padding-left: .4em; text-indent: -.4em;"><span>Oerlikon 20 mm cannon</span></li>
+                    </ul>
+                    </ul></td></tr>
+                    <tr style="vertical-align:top;"><td style="font-weight: bold">Armour</td><td>Improvised</td></tr>
+                    </tbody></table>
+            </section>
         </div>
     </main>
 </body>
